# gedcomtools

./: .env  .gitignore  .pylintrc  .readthedocs.yaml  README.md  SESSION_2026-03-15.md  TODO.md  UPDATES.md  check_g7spec.py  gxcli.md  gxcli.py  idstats.py  objshell.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: pylint.yml
.sample_data/: Sui_Dynasty.ged  allged.ged  full.gedcomx  maximal70.ged
.sample_data/gedcom5/: gedcom5_comprehensive.ged
.sample_data/gedcomx/: european_royalty.gedx  full.gedcomx
docs/: ComponentLevel.rst  Extensions.rst  HelperClasses.rst  TopLevel.rst  conf.old.py  conf.py  gxcli.md  index.rst  requirements.txt
docs/_build/doctrees/: ComponentLevel.doctree  Extensions.doctree  HelperClasses.doctree  TopLevel.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  ComponentLevel.html  Extensions.html  HelperClasses.html  TopLevel.html  genindex.html  getting-started.html  gxcli.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: cli.rst  gedcom7.rst
docs/html/: .buildinfo  genindex.html  search.html
docs/html/.doctrees/: ComponentLevel.doctree  (+2 more)
graph/: person_to_person.jsonl  persons.jsonl
src/gedcomtools/: __init__.py  _gedcom5x.py  cli.py  familysearch_quick_oauth.py  gctool.py  gctool_commands.py  gctool_dataops.py  gctool_examine.py  gctool_interactive.py  gctool_load.py  gctool_output.py  gedcom.py  glog.py  graph.py  logging_hub.py  loggingkit.py  quick_oauth.py  rel_cache.py  xxxtranslation.py
tests/: conftest.py  test_agent.py  test_cli.py  test_conclusion.py  test_confidence.py  test_conversion.py  test_conversion_return_types.py  test_g7togx.py  test_gctool.py  test_gedcom5_individual.py  test_gedcom5_parser.py  test_gedcom7_models.py  test_gedcom7_official.py  test_gedcom7_parser.py  test_gedcom7_validator.py  test_gedcom7_writer.py  test_gedcomx.py  test_gedcomx_gml.py  test_gedcomx_roundtrip.py  test_gedcomx_validation_rules.py  test_gml_facade.py  test_identifier.py  test_name.py  test_note.py  test_person.py  test_sample_data_roundtrip.py  test_serialization.py  test_source_reference.py  test_textvalue.py  test_uri.py  test_zip.py
tests/extensions/: conftest.py  test_extension_api.py  test_fs_additional_attribution.py  test_fs_types.py
tests/gedcom5/: test_gedcom5_official.py
(+192 files in other folders)
