[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gedcomtools"
version = "0.5.22"
description = "Gedcom-X tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "orjson","python-dateutil","loguru",
]

[project.scripts]
gxcli = "gedcomtools.gedcomx.gxcli:main"
g7cli = "gedcomtools.gedcom7.g7cli:main"
validate7 = "gedcomtools.gedcom7.validate7:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gedcomtools*"]
