[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gedcomtools"
version = "0.6.0"
description = "Gedcom-X tools RC1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "orjson","python-dateutil","loguru",
]

[project.scripts]
gedcomtools = "gedcomtools.cli:main"
gxcli = "gedcomtools.gedcomx.gxcli:main"
g7cli = "gedcomtools.gedcom7.g7cli:main"
validate7 = "gedcomtools.gedcom7.validate7:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gedcomtools*"]
