[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gedcomtools"
version = "0.7.0"
description = "gedcomtools — GEDCOM 5/7/X toolkit (alpha)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "orjson","python-dateutil","loguru","pydantic>=2.0","python-dotenv",
]

[project.scripts]
gedcomtools = "gedcomtools.cli:main"
gxcli = "gedcomtools.gedcomx.gxcli:main"
g7cli = "gedcomtools.gedcom7.g7cli:main"
validate7 = "gedcomtools.gedcom7.validate7:main"
g7spec = "gedcomtools.gedcom7.spectools:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gedcomtools*"]

[tool.setuptools.package-data]
"gedcomtools.gedcom7" = ["spec_rules.json"]
